objects/Contact_Delta_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Site_Contact10__c</fullName>
        <label>OMX_Site_Contact10</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Site_Contact1__c</fullName>
        <label>OMX_Site_Contact1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Site_Contact2__c</fullName>
        <label>OMX_Site_Contact2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Site_key__c</fullName>
        <label>OMX_Site_key</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Partially Processed</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Delta Assignment</label>
    <nameField>
        <label>Contact Delta Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Delta Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>